--- a/src/styles/mixins.css
+++ b/src/styles/mixins.css
@@ -4,3 +4,10 @@
     margin: auto;
     position: relative;
 }
+
+@define-mixin all_transition {
+    transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -webkit-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+}
