--- a/src/styles/generics.css
+++ b/src/styles/generics.css
@@ -2,5 +2,6 @@
 @import "mixins.css";
 
 body {
+    font-family: -apple-system, BlinkMacSystemFont, 'Avenir Next', Avenir, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
     margin: 0;
 }
