--- a/docs/main.css
+++ b/docs/main.css
@@ -99,7 +99,7 @@ body {
   display: block;
   margin: 0 auto;
   max-width: 1200px;
-  padding: 2% 0;
+  padding: 2% 5%;
 }
 
 .b-slide h2 {
@@ -152,8 +152,9 @@ body {
   font-family: 'Mina', sans-serif;
   font-size: 2rem;
   color: #cdcdcd;
-  padding: 2%;
+  padding: 2% 5%;
   display: block;
+  text-align: center;
 }
 
 .b-splash__bg {
@@ -205,7 +206,7 @@ body {
 .b-sticky__inner {
   display: block;
   margin: 0 auto;
-  padding: 0.5em;
+  padding: 0.5em 5%;
   max-width: 1200px;
 }
 
