--- a/src/styles/blocks/sticky.css
+++ b/src/styles/blocks/sticky.css
@@ -15,7 +15,7 @@ $block_name: sticky;
     &__inner {
         display: block;
         margin: 0 auto;
-        padding: 0.5em;
+        padding: 0.5em 5%;
         max-width: 1200px;
     }
 
